tests/should-fail/type-error/no-leaks.fk
-- #desc thunk inside data constructor potentially leaks effect
interface Eff = bang : Unit

data Bar = One {Int}

-- #return cannot unify abilities [£] (line 7 , column 21) and [£ | Eff] (line 4 , column 17)
exec : Bar [Eff] -> Int
exec (One f) = f!

main : [Eff]Int
main! = exec (One {1})
